# RiichiCities

./: .gitignore  .replit  README.md  chats.json  cities_FORMAT.md  city_users.json  config.py  links.json  linksn.json  main.py  pyproject.toml  pyrightconfig.json
handlers/: __init__.py  city_handlers.py  common.py  days_handlers.py  hand_handlers.py  links_handlers.py
services/: __init__.py  city_catalog_service.py  city_service.py  days_service.py  links_service.py
tests/: test_city_logic.py
