[tool.poetry]
name = "repl_nix_RiichiCities"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
telegram = "^0.0.1"
python-telegram-bot = "13.13"
Flask = "^2.3.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
